err/mopidy-beetslocal.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Mopidy-2.1.0.dist-info'...
Listing './lib/python3.5/site-packages/Mopidy_BeetsLocal-0.0.9.egg-info'...
Listing './lib/python3.5/site-packages/Mopidy_BeetsLocal-0.0.9.egg-info/.AppleDouble'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Pykka-1.2.1.dist-info'...
Listing './lib/python3.5/site-packages/Unidecode-1.0.22.dist-info'...
Listing './lib/python3.5/site-packages/beets'...
Listing './lib/python3.5/site-packages/beets/autotag'...
Listing './lib/python3.5/site-packages/beets/dbcore'...
Listing './lib/python3.5/site-packages/beets/ui'...
Listing './lib/python3.5/site-packages/beets/util'...
Listing './lib/python3.5/site-packages/beets-1.4.6.egg-info'...
Listing './lib/python3.5/site-packages/beetsplug'...
Listing './lib/python3.5/site-packages/beetsplug/bpd'...
Listing './lib/python3.5/site-packages/beetsplug/lastgenre'...
Listing './lib/python3.5/site-packages/beetsplug/metasync'...
Listing './lib/python3.5/site-packages/beetsplug/web'...
Listing './lib/python3.5/site-packages/beetsplug/web/static'...
Listing './lib/python3.5/site-packages/beetsplug/web/templates'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jellyfish'...
Listing './lib/python3.5/site-packages/jellyfish-0.5.6.egg-info'...
Listing './lib/python3.5/site-packages/mopidy'...
Listing './lib/python3.5/site-packages/mopidy/audio'...
Listing './lib/python3.5/site-packages/mopidy/config'...
Listing './lib/python3.5/site-packages/mopidy/core'...
Listing './lib/python3.5/site-packages/mopidy/file'...
Listing './lib/python3.5/site-packages/mopidy/http'...
Listing './lib/python3.5/site-packages/mopidy/http/data'...
Listing './lib/python3.5/site-packages/mopidy/internal'...
Listing './lib/python3.5/site-packages/mopidy/local'...
Listing './lib/python3.5/site-packages/mopidy/m3u'...
Listing './lib/python3.5/site-packages/mopidy/models'...
Listing './lib/python3.5/site-packages/mopidy/mpd'...
Listing './lib/python3.5/site-packages/mopidy/mpd/protocol'...
Listing './lib/python3.5/site-packages/mopidy/softwaremixer'...
Listing './lib/python3.5/site-packages/mopidy/stream'...
Listing './lib/python3.5/site-packages/mopidy_beetslocal'...
Compiling './lib/python3.5/site-packages/mopidy_beetslocal/library.py'...
***   File "./lib/python3.5/site-packages/mopidy_beetslocal/library.py", line 33
    except sqlite3.OperationalError, e:
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/munkres-1.0.12.dist-info'...
Listing './lib/python3.5/site-packages/musicbrainzngs'...
Listing './lib/python3.5/site-packages/musicbrainzngs-0.6.egg-info'...
Listing './lib/python3.5/site-packages/mutagen'...
Listing './lib/python3.5/site-packages/mutagen/_senf'...
Listing './lib/python3.5/site-packages/mutagen/_tools'...
Listing './lib/python3.5/site-packages/mutagen/asf'...
Listing './lib/python3.5/site-packages/mutagen/id3'...
Listing './lib/python3.5/site-packages/mutagen/mp3'...
Listing './lib/python3.5/site-packages/mutagen/mp4'...
Listing './lib/python3.5/site-packages/mutagen-1.39.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pykka'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './lib/python3.5/site-packages/unidecode'...
Listing './lib/python3.5/site-packages/uritools'...
Listing './lib/python3.5/site-packages/uritools-2.1.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/python-wheels'...
